--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,87 +1,65 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
-	<title>Chess Pattern</title>
-	<style>
-		.chessboard-container {
-			position: fixed;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			width: 400px;
-			height: 400px;
-			border: 5px solid #333;
-			overflow: hidden;
-		}
-		
-        .chessboard {
-            display: grid;
-            grid-template-columns: repeat(8, minmax(0, 1fr));
-            grid-template-rows: repeat(8, minmax(0, 1fr));
+    <title>Chess Game</title>
+    <style>
+        .chessboard-container {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             width: 400px;
             height: 400px;
-            transform: rotate(0deg);
+            border: 5px solid #333;
+            overflow: hidden;
         }
 
-        .piece.white {
-            color: white;
-            filter: drop-shadow(0 0 2px rgba(0, 0, 0, 1));
-        }
-
-        .piece.black {
-            color: black;
-        }
-
-        .flipped {
-            transform: rotate(180deg);
+        .chessboard {
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+            grid-template-rows: repeat(8, 1fr);
+            width: 100%;
+            height: 100%;
         }
 
         .square {
+            width: 100%;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 32px;
+            user-select: none;
         }
 
-        .square.light {
+        .light {
             background-color: #f0d9b5;
         }
 
-        .square.dark {
+        .dark {
             background-color: #b58863;
         }
 
         .piece {
-            font-size: 36px;
-            cursor: pointer;
-        }
-
-        .piece.draggable {
             cursor: grab;
         }
-
-        .dragging {
-            opacity: 0.5;
-        }
-
-        /* Rotate pieces for black player */
-        .flipped .piece {
-            transform: rotate(180deg);
-        }
-	</style>
+    </style>
 </head>
 
 <body>
-	<div class="chessboard-container">
-		<div class="chessboard"></div>
-	</div>
-    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
+    <div class="chessboard-container">
+        <div class="chessboard"></div>
+    </div>
+
+    <!-- Load Socket.io -->
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+
+    <!-- Load Chess.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
+
+    <!-- Load the Chess Game Script -->
     <script src="/javascripts/chessgame.js"></script>
 </body>
 
 </html>
-
-
